# wordlesolve

./: LICENSE  Readme.org  choose_prior.py  fiveletterwords  wordle.py  wordle2.py  wordle3.py  wordle_lists.py  wordleinput.txt
algo_develop/: oguagnul.py  wordle2.py
official_word_lists/: wordle3.py
old/: wordle.py
rustwordle/: Cargo.toml  makeswordlist.py  wordlist.txt
rustwordle/src/: main.rs
rustwordle/src/wordlist/: mod.rs
source/: Cargo.toml
source/src/: main.rs
unlimited/: https _www.wordleunlimited.com_static_js_main.abf67835.js
