[package]
name = "wordlesove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
libm = "0.2.2"
text_io = "0.1.10"
itertools = "0.10.3"
permutation = "0.4.0"
indexmap = "1.8.1"
rayon = "1.5.2"

